Java 11 fix-ups
#686